[package]
name = "android-keystore"
version = "0.1.1"
edition = "2024"
authors = [
  "Antonin Brauer <antonin.brauer@yahoo.fr>",
  "Yann BLANC <yannblanc33@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BooKKeur/android-keystore"

[dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
base64 = "0.22.1"

[features]
api_level_11 = []
api_level_33 = ["api_level_11"]
